crates/cli/tests/snapshots/snapshot_tests__codeclimate_unused_deps_only.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: json_str
---
[
  {
    "type": "issue",
    "check_name": "fallow/unused-dependency",
    "description": "Package 'lodash' is in dependencies but never imported",
    "severity": "major",
    "fingerprint": "fallow/unused-dependency:package.json:5",
    "location": {
      "path": "package.json",
      "lines": {
        "begin": 5
      }
    }
  }
]
