crates/cli/tests/snapshots/snapshot_tests__codeclimate_unused_files_only.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: json_str
---
[
  {
    "type": "issue",
    "check_name": "fallow/unused-file",
    "description": "File is not reachable from any entry point",
    "severity": "major",
    "fingerprint": "fallow/unused-file:src/dead.ts",
    "location": {
      "path": "src/dead.ts",
      "lines": {
        "begin": 1
      }
    }
  }
]
